complex/k8s/client-config.yaml
apiVersion: apps/v1
# A deployment is a type of controller: it monitors for config changes and acts on those changes
kind: Deployment
metadata:
  name: client-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      component: web
  template:
    metadata:
      labels:
        component: web
    spec:
      containers:
        - name: client
          image: sterelus/multi-client
          ports:
            - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-service
spec:
  # exposes pods belonging to service to all other objects in the k8s cluster
  type: ClusterIP
  selector:
    # objects that selector matches belong to this service
    component: web
  ports:
    - port: 3000
      targetPort: 3000
